# compass

./: Makefile  Makefile.am  README  autogen.sh  bdd_tree.cc  bdd_tree.h  buddy.cc  common.mk  compass.thrift  configure.ac  dot_label_to_var.py  expression.c  expression.h  generate_norm_dag.sh  lexer.ll  norms.h  parser.y  prop_func.h  prop_logic.y  prop_logic_main.cc  proposition.cc  proposition.h  wiki_main.cc
